[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sprites/domino.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Domino.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/font.tres" type="DynamicFont" id=3]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 49.5146, 51.6746 )

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 49.5146, 51.1476 )

[node name="Sprite" type="Sprite"]

scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -54, 0 )
script = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="TopPickableDetection" type="Area2D" parent="."]

position = Vector2( 0, 105.594 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Pickable", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopPickableDetection"]

position = Vector2( 1.58112, -50.5958 )
shape = SubResource( 2 )

[node name="BottomPickableDetection" type="Area2D" parent="."]

position = Vector2( 0, 105.594 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Pickable", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomPickableDetection"]

position = Vector2( 1.05408, 52.1769 )
shape = SubResource( 1 )

[node name="TopLabel" type="Label" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 10.0
margin_right = 139.0
margin_bottom = 109.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="BottomLabel" type="Label" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 51.0
margin_top = 112.0
margin_right = 140.0
margin_bottom = 211.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="Top" type="Position2D" parent="."]

position = Vector2( -0.239197, 0 )
_sections_unfolded = [ "Transform" ]

[node name="TopLeft" type="Position2D" parent="."]

position = Vector2( -54.5132, 56 )

[node name="TopRight" type="Position2D" parent="."]

position = Vector2( 53.4868, 56 )

[node name="BottomLeft" type="Position2D" parent="."]

position = Vector2( -54.2392, 153.586 )

[node name="BottomRight" type="Position2D" parent="."]

position = Vector2( 53.7608, 153.586 )

[node name="Bottom" type="Position2D" parent="."]

position = Vector2( -0.513199, 212 )

[connection signal="mouse_entered" from="TopPickableDetection" to="." method="_on_TopPickableDetection_mouse_entered"]

[connection signal="mouse_exited" from="TopPickableDetection" to="." method="_on_TopPickableDetection_mouse_exited"]

[connection signal="mouse_entered" from="BottomPickableDetection" to="." method="_on_BottomPickableDetection_mouse_entered"]

[connection signal="mouse_exited" from="BottomPickableDetection" to="." method="_on_BottomPickableDetection_mouse_exited"]


